GNOME Bugzilla – Bug 744536
Fix docs for g_irepository_get_shared_library()
Last modified: 2015-03-10 19:53:36 UTC
The return value is not a full path to the library[1] and is a comma-separated list of paths. 1. https://git.gnome.org/browse/gobject-introspection/tree/girepository/gitypelib.c#n2243
Created attachment 296845 [details] [review] Fix docs for g_irepository_get_shared_library()
Thanks for the patch! Attachment 296845 [details] pushed as 49e8afc - Fix docs for g_irepository_get_shared_library()