Fix docs for g_irepository_get_shared_library()

https://bugzilla.gnome.org/show_bug.cgi?id=744536
Signed-off-by: Garrett Regier <garrett.regier@riftio.com>